# coralmicro-out-of-tree-sample

./: CMakeLists.txt  main.cc  main_old.cc  main_tpu.cc
models/cpu/: 01.tflite  02.tflite  03.tflite  04.tflite  06.tflite  08.tflite  12.tflite  15.tflite  16.tflite  18.tflite  21.tflite  27.tflite  29.tflite
models/multi/20_models/: 10_edgetpu.tflite  13.tflite
models/multi/5_models/: 5_edgetpu.tflite
models/tpu/: 04_edgetpu.tflite  08_edgetpu.tflite  09_edgetpu.tflite  15_edgetpu.tflite  17_edgetpu.tflite  18_edgetpu.tflite  24_edgetpu.tflite  29_edgetpu.tflite  mobilenet_v2_1.0_224_quant_edgetpu.tflite
